# dingo

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.gradle  build.rs  build.rs.in  cbindgen.toml  gen-cxx-header.sh  gradle.properties  memory_monitor.sh  settings.gradle
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  custom.md  feature-issue-template.md  feature-name.md  feature.md
.github/workflows/: build.yml  coverage.yml  git-sync.yml  main.yml  release-dockerhub.yml  release-github.yml  release-javadoc-ghpages.yml  release-package.yml  release.yml
benchmark/: BM25SearchBenchmark.h  BenchmarkConfig.cpp  BenchmarkConfig.h  Bm25SearchBenchmark.h  CMakeLists.txt  IndexDocumentBenchmark.h  README.md  SkipIndexBenchmark.h  WikiDatasetLoader.cpp  WikiDatasetLoader.h  main.cpp  simple_query_benchmark.h
buildSrc/: build.gradle
config/: dingo.dic
config/checkstyle/: apache_2_license.properties.txt  apache_2_license.xml.txt  checkstyle.xml  suppression.xml
contrib/: CMakeLists.txt
contrib/boost-cmake/: CMakeLists.txt
contrib/corrosion-rs-cmake/: CMakeLists.txt
contrib/croaring-cmake/: CMakeLists.txt
contrib/thread_pool/: ThreadPool.h
demo/: benchmark.rs  bm25_search.rs  delete_term.rs  delete_test.rs  loop_search.rs  natural_language.rs  regrex_search.rs  search_examples.rs
dingo-calcite/: build.gradle
dingo-cli/: build.gradle
dingo-cli/conf/: config.yaml  log4j-coordinator.properties  log4j-executor.properties  log4j-sqlline.properties  log4j.properties
dingo-cli/driver-mysql/: build.gradle
dingo-cli/driver-server/: build.gradle
dingo-cli/sqlline/: build.gradle
dingo-client/: build.gradle  ghpages.gradle
dingo-cluster-api/: build.gradle
dingo-codec-serial/: build.gradle
dingo-common/: build.gradle
dingo-coordinator/: build.gradle
dingo-ddl/: build.gradle
dingo-dist/: .gitignore  build.gradle
dingo-dist/conf/: application-dev.yaml  application-proxy-dev.yaml  application-proxy.yaml  application-web-dev.yaml  application-web.yaml  client.yaml  config.yaml  coordinator.yaml  db_rocks.ini  dingodb.jks  executor.yaml  log_rocks.ini  logback-coordinator.xml  logback-driver.xml  logback-executor-release.xml  logback-executor.xml  logback-mysql.xml  logback-proxy.xml  logback-sqlline.xml  logback-web.xml  logback.xml
dingo-driver/: build.gradle
dingo-driver-client/: build.gradle
dingo-driver/client/: build.gradle
dingo-driver/common/: build.gradle
dingo-driver/host/: build.gradle
dingo-driver/mysql-service/: build.gradle
dingo-example/: build.gradle
dingo-exec/: build.gradle
dingo-executor/: build.gradle
dingo-expr/: build.gradle
dingo-expr/annotations/: build.gradle
dingo-expr/console/: build.gradle
dingo-expr/json-runtime/: build.gradle
dingo-expr/json-schema/: build.gradle
dingo-expr/parser/: .gitignore  build.gradle
dingo-expr/runtime/: build.gradle
dingo-expr/test/: build.gradle
dingo-func-api/: build.gradle
dingo-index/: build.gradle
dingo-kvstore-api/: build.gradle
dingo-kvstore-raft/: build.gradle
dingo-kvstore-rocks/: build.gradle
dingo-license-api/: build.gradle
dingo-meta-api/: build.gradle
dingo-meta-proxy/: build.gradle
dingo-mirror-processing-unit/: build.gradle
dingo-mysql-init/: build.gradle
dingo-net-api/: build.gradle
dingo-net-netty/: build.gradle
dingo-partition-api/: build.gradle
dingo-partition-base/: build.gradle
dingo-proxy/: build.gradle
dingo-raft/: build.gradle
dingo-raft-kv/: build.gradle
dingo-row-rocksdb-api/: build.gradle
dingo-row-store/: build.gradle
dingo-row-store-api/: build.gradle
dingo-scheduler-api/: build.gradle
dingo-sdk/: build.gradle  ghpages.gradle
dingo-serial/: build.gradle
dingo-server/: build.gradle
dingo-server/client/: build.gradle
dingo-server/coordinator/: build.gradle
dingo-server/driver-proxy/: build.gradle
dingo-server/executor/: build.gradle
dingo-server/protocol/: build.gradle
dingo-store-api/: build.gradle
dingo-store-local/: build.gradle
dingo-store-memory/: build.gradle
dingo-store-mpu/: build.gradle
dingo-store-proxy/: build.gradle
dingo-store-raft/: build.gradle
dingo-store-rocksdb/: build.gradle
dingo-test/: build.gradle
dingo-test/meta-local/: build.gradle
dingo-test/store-memory/: build.gradle
dingo-tool-api/: build.gradle
dingo-tool-service/: build.gradle
dingo-transaction-api/: build.gradle
dingo-verify/: build.gradle
dingo-web/: build.gradle
dingokv/: build.gradle
docker/: Dockerfile  docker-compose.yml
docs/: .gitignore  conf.py  deployment.md  index.rst  jdbcconnect.md  overview.md  requirements.txt  todo.txt
docs/architecture/: architecture.md  cluster.md  index.rst  network.md  overview.md
docs/contribute/: contributing.md  index.rst
docs/deployment/: cmds_on_maintenance.md  deploy_in_single_node_using_docker.md  deploy_on_ansible.md  deploy_on_cluster(SingleNode).md  deploy_on_cluster.md  deploy_on_cluster_by_ansible.md  deploy_on_docker.md  deploy_on_single_node_using_shell.md  deploy_on_standalone.md  index.rst  maintenance_manual.md
docs/en/: .readthedocs.yaml  index.rst
docs/overview/: index.rst  overview.md  terminology.md
docs/release_notes/: dingodb_0_1_0_rn.md  (+4 more)
examples/: CMakeLists.txt  README.md  dingo_doc.cpp  index_doc.cpp  query_benchmark.cpp  query_terms.json
examples/utils/: CMakeLists.txt  utils.cpp  utils.h
include/: tantivy_search.h  tantivy_search_cbindgen.h  tantivy_search_cxx.h
scripts/: .gitignore  download_datasets.sh  memory_analyze.sh  plot_memory.py
src/: cache.rs  commons.rs  flurry_cache.rs  furry_cache.rs  lib.rs  row_id_bitmap_collector.rs  utils.rs
tests/: CMakeLists.txt  benchmark.rs  loop_search.rs  natural_language.rs
tests/throughput/: CMakeLists.txt  README.md  benchmark.cpp  query_benchmark.cpp
tests/unit_test/: BoundaryIndexManager.cpp  BoundaryIndexSearch.cpp  CMakeLists.txt  FunctionalFFI.cpp
tests/utils/: CMakeLists.txt  utils.cpp  utils.h  utils_template_impl.h
(+5410 files in other folders)
