[package]
name = "tantivy_search" # repo package name
version = "0.1.0"
authors = ["MochiXu <mochix@myscale.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tantivy_search" # library name
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
libc = "0.2.82"
tantivy = "0.21.1"
rayon = "1.5"
once_cell = "1.7"
flurry = "0.3"
roaring = "0.10.2"
cached = "0.46.1"
stretto = { version = "0.8.2", features = ["full"] }
cang-jie = "0.18.0"
jieba-rs = { version = "0.6.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.16"
log4rs = "1.2.0"
threadpool = "1.8.1"
rand = "0.8.4"
clap = "2.33"


[features]
use-flurry-cache = []

[profile.release]
debug = true


[[bin]]
name = "tantivy_search_benchmark"
path = "tests/benchmark.rs"

[[bin]]
name = "loop_search"
path = "tests/loop_search.rs"

[[bin]]
name = "regrex_search"
path = "tests/regrex_search.rs"
